--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="headbox font">
+    <div class="headbox">
       <h1>Hall of fame</h1>
     </div>
     <div class="container">
-      <div class="box1 color">
-        <p class="font"><b>Think out of the box</b></p>
+      <div class="box1 commombtw3box">
+        <p><b>Think out of the box</b></p>
       </div>
-      <div class="box2 color box">
-        <p class="style font"><b>NEVER GIVE UP</b></p>
+      <div class="box2 commombtw3box commonboxsize">
+        <p class="commonwordsize"><b>NEVER GIVE UP</b></p>
       </div>
-      <div class="box3 color box">
-        <p class="style font"><b>NEVER GIVE UP</b></p>
+      <div class="box3 commombtw3box commonboxsize">
+        <p class="commonwordsize"><b>NEVER GIVE UP</b></p>
       </div>
     </div>
   </body>
